# Python-projects

./: .gitignore  README.md  cli.py  cli_ingest.py  dataanalysis.ipynb  practice.ipynb  progrss.md  pyproject.toml  re_summarize_recent.py  roadmap.md  setup.md
configs/: sources.yaml
configs/prompts/: brief.md  extended.md
src/ingest/: rss_loader.py
src/normalize/: db.py  deduper.py  text_cleaner.py
src/render/: renderer.py
src/summarize/: model_router.py  summarizer.py
templates/: digest.html
